Update styles to prevent XML Button on book site to be displayed with wrong width and as block

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -380,19 +380,25 @@ section.callaction {
 .box-bottom a:hover {
 	color: #eee;
 	text-decoration: none;
-}  
+}
 /*#footer_logo_ub img {
 	width: 100%;
 	max-width: 340px;
 	margin-top: 3em;
 	padding-right: 0px;
-} */            
+} */
 /*'Empfohlene Zitierweise' auf Buch-Seiten - doi-Angaben-Umbruch in Chrome */
 
 a[href^="https://doi.org/10.11588"] {
   word-break: break-all;
   width: 170px;
   display: block;
+}
+
+/* nw - hinzugefügt am 24.3.2021 - width und display für Links zu Buch Dateien sollen nicht verändert werden */
+.book-file-links a[href^="https://doi.org/10.11588"] {
+	width: auto;
+	display: inline-block;
 }
 
 .widget > ul.tags > li > a[href^="https://doi.org/10.11588"] {
@@ -427,7 +433,7 @@ a[href^="https://doi.org/10.11588"] {
 	margin-bottom: 20px;
 	position: relative;
 	word-break: break-word;
-}                             
+}
 /* ===================================10. Inner - Section: page headline==================================== */
 #inner-headline {
 	background: #252525;
@@ -710,6 +716,11 @@ blockquote cite a, blockquote cite a:visited, blockquote cite a:visited {
 
 .summary > .btn-group:first-child > .btn.btn-default:first-child > a {
   color: #ffffff;
+}
+
+.btn.btn-highlight {
+	background: #0077bb;
+	color: #ffffff;
 }
 
 #dropdownMenu1 {
@@ -1138,7 +1149,7 @@ ul.meta-post li a {
 .stats_chapter_title , .stats_chapter_cell .chapter_file,
 #total-chapter-pdf {
 	font-size: 0.9em;
-	max-width: 160px;   
+	max-width: 160px;
 }
 .stats_chapter_title {
   line-height: 1.5em;
@@ -1726,7 +1737,7 @@ ul.portfolio li article a i {
 	height: 20px;
 	font-size: 14px;
 }
-.container, 
+.container,
 .col-lg-9,
 .boxAktuelles,
 #boxAktuelles {
@@ -1761,7 +1772,7 @@ footer #sub-footer .container .col-lg-12 .row .col-lg-3 img {
 #infoBoxRechts {
 	width: 100%;
 	margin: 0;
-}     
+}
 }
 @media (max-width: 768px) {
 #infoBoxRechts {
@@ -1788,7 +1799,7 @@ body {
 	padding-left: 3%;
 	padding-right: 3%;
 }
-.container, 
+.container,
 .col-lg-9,
 .boxAktuelles,
 #boxAktuelles {
